--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Liste</title>
+    <title>Ikran Hassan</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <div class="top-header">
-      <a href="#" class="top-menu">Menu</a>
+      <a href="#" class="top-menu">Projekte</a>
       <a href="#" class="top-name">Ikran Hassan</a>
     </div>
     <div class="mein-grid mein-grid--menu">
       <div class="box" data-project="erwecken">
         <div class="row">
           <a href="#" class="title">Erwecken der Nacht</a>
-          <span class="meta">Stopmotion<br />1. Semester</span>
+          <span class="meta">Stopmotion<br />2024</span>
         </div>
 
         <div class="hover-img img-a">
@@ -36,7 +36,7 @@
       <div class="box" data-project="licht-raum">
         <div class="row">
           <a href="#" class="title">Zwischen Licht und Raum</a>
-          <span class="meta">Signaletik<br />2. Semester</span>
+          <span class="meta">Signaletik<br />2024</span>
         </div>
 
         <div class="hover-img img-a">
@@ -56,7 +56,7 @@
       <div class="box" data-project="schrift">
         <div class="row">
           <a href="#" class="title">Schrift im Strom</a>
-          <span class="meta">Editorial<br />3. Semester</span>
+          <span class="meta">Editorial<br />2024</span>
         </div>
 
         <div class="hover-img img-a">
@@ -76,7 +76,7 @@
       <div class="box" data-project="tueren">
         <div class="row">
           <a href="#" class="title">Zwischen Türen</a>
-          <span class="meta">Poster Design<br />4. Semester</span>
+          <span class="meta">Poster Design<br />2025</span>
         </div>
 
         <div class="hover-img img-a">
@@ -96,7 +96,7 @@
       <div class="box" data-project="schatten">
         <div class="row">
           <a href="#" class="title">Leben im Schatten</a>
-          <span class="meta">Editorial<br />4. Semester</span>
+          <span class="meta">Editorial<br />2025</span>
         </div>
 
         <div class="hover-img img-a">
@@ -116,7 +116,7 @@
       <div class="box" data-project="zusammenspiel">
         <div class="row">
           <a href="#" class="title">Das Zusammenspiel</a>
-          <span class="meta">Poster<br />4. Semester</span>
+          <span class="meta">Poster<br />2025</span>
         </div>
 
         <div class="hover-img img-a">
@@ -136,7 +136,7 @@
       <div class="box" data-project="hidden-london">
         <div class="row">
           <a href="#" class="title">Hidden London</a>
-          <span class="meta">Editorial<br />5. Semester</span>
+          <span class="meta">Editorial<br />2025</span>
         </div>
 
         <div class="hover-img img-a">
@@ -156,7 +156,7 @@
       <div class="box" data-project="film">
         <div class="row">
           <a href="#" class="title">Wie im Film</a>
-          <span class="meta">Poster<br />5. Semester</span>
+          <span class="meta">Poster<br />2025</span>
         </div>
 
         <div class="hover-img img-a">
@@ -226,15 +226,12 @@
         <div class="project-detail">
           <div class="project-page">
             <div class="project-hero">
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
+              <img src="imgs/zwischen_licht_und_raum_.jpg" alt="" />
             </div>
             <div class="project-gallery">
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
+              <img src="imgs/zwischen_licht_und_raum_1.jpg" alt="" />
+              <img src="imgs/zwischen_licht_und_raum_2.jpg" alt="" />
+              <img src="imgs/zwischen_licht_und_raum_3.jpg" alt="" />
 
               <div class="project-text">
                 <p>
@@ -296,15 +293,16 @@
         <div class="project-detail">
           <div class="project-page">
             <div class="project-hero">
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
+              <img src="imgs/zwischen_Türen.jpg" alt="" />
             </div>
             <div class="project-gallery">
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
+              <img src="imgs/zwischen_Türen_1.jpg" alt="" />
+              <img src="imgs/zwischen_Türen_2.jpg" alt="" />
+              <img src="imgs/zwischen_Türen_3.jpg" alt="" />
+              <img src="imgs/zwischen_Türen_4.jpg" alt="" />
+              <img src="imgs/zwischen_Türen_5.jpg" alt="" />
+              <img src="imgs/zwischen_Türen_6.jpg" alt="" />
+              <img src="imgs/zwischen_Türen_7.jpg" alt="" />
 
               <div class="project-text">
                 <p>
@@ -337,6 +335,16 @@
               <img src="imgs/Leben_im_Schatten_5.jpg" alt="" />
               <img src="imgs/Leben_im_Schatten_6.jpg" alt="" />
               <img src="imgs/Leben_im_Schatten_8.jpg" alt="" />
+              <img src="imgs/Leben_im_Schatten_9.jpg" alt="" />
+              <img src="imgs/Leben_im_Schatten_10.jpg" alt="" />
+              <img src="imgs/Leben_im_Schatten_11.jpg" alt="" />
+              <img src="imgs/Leben_im_Schatten_12.jpg" alt="" />
+              <img src="imgs/Leben_im_Schatten_13.jpg" alt="" />
+              <img src="imgs/Leben_im_Schatten_14.jpg" alt="" />
+              <img src="imgs/Leben_im_Schatten_15.jpg" alt="" />
+              <img src="imgs/Leben_im_Schatten_16.jpg" alt="" />
+              <img src="imgs/Leben_im_Schatten_17.jpg" alt="" />
+              <img src="imgs/Leben_im_Schatten_18.jpg" alt="" />
 
               <div class="project-text">
                 <p>
@@ -360,7 +368,7 @@
         <div class="project-detail">
           <div class="project-page">
             <div class="project-hero">
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
+              <img src="imgs/Das_Zusammenspiel.jpg" alt="" />
             </div>
             <div class="project-gallery">
               <img src="imgs/das_Zusammenspiel_1.jpg" alt="" />
@@ -404,6 +412,9 @@
               <img src="imgs/Hidden_London_8.jpg" alt="" />
               <img src="imgs/Hidden_London_9.jpg" alt="" />
               <img src="imgs/Hidden_London_10.jpg" alt="" />
+              <img src="imgs/Hidden_London_11.jpg" alt="" />
+              <img src="imgs/Hidden_London_12.jpg" alt="" />
+              <img src="imgs/Hidden_London_13.jpg" alt="" />
 
               <div class="project-text">
                 <p>
@@ -427,7 +438,7 @@
         <div class="project-detail">
           <div class="project-page">
             <div class="project-hero">
-              <img src="imgs/Schrift_im_Strom_2.jpg" alt="" />
+              <img src="imgs/wie_im_Film.png" alt="" />
             </div>
             <div class="project-gallery">
               <img src="imgs/Wie_im_film_1.jpg" alt="" />
